--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -22,7 +22,7 @@ Roles determine a user's level of access and permissions within an organization.
 
 ### The Creator Role
 
-When a user creates a new Organization, that user is automatically added as the Organization's first member and assigned the default Role of `admin`. By default, `admin` is the Creator Role. 
+When a user creates a new Organization, that user is automatically added as the Organization's first member and assigned the default Role of `admin`. By default, `admin` is the Creator Role. This special distinction indicates which role has the ability to create Organizations within that application.
 
 <Callout type="warning">
 You can't delete a Role if it's used as the Organization Creator Role. However, you can [reassign the Creator Role to another role](/docs/organizations/creator-role).
