--- a/docs/organizations/roles-permissions.mdx
+++ b/docs/organizations/roles-permissions.mdx
@@ -11,7 +11,7 @@ Clerk supports modeling your own custom Roles and Permissions to control access 
 
 Roles determine a user's level of access to the organization. For each instance there are currently two default roles:
 
-- **Admin (`org:admin, previously `org:basic_member`)** Offers full access to organization resources. Members with the admin role have all the [System Permissions](#system-permissions). They can fully manage organizations and organization memberships.
+- **Admin (`admin`)** Offers full access to organization resources. Members with the admin role have all the [System Permissions](#system-permissions). They can fully manage organizations and organization memberships.
 - **Member (`org:member`)** The default role for new organization members. Access to organization resources is limited to only Read members Permission by default. They cannot manage organizations and organization memberships but can view information about the organization and other members in it.
 
 ### The Creator Role
