--- a/docs/organizations/roles-permissions.mdx
+++ b/docs/organizations/roles-permissions.mdx
@@ -9,10 +9,20 @@ Clerk supports modeling your own custom Roles and Permissions to control access 
 
 ## Roles
 
-Roles determine a user's level of access to the organization. For each instance there are currently two default roles:
+Roles determine a user's level of access to the organization. 
+
+### Default Roles
+
+For each instance there are currently two default roles:
 
 - **Admin (`admin`)** Offers full access to organization resources. Members with the admin role have all the [System Permissions](#system-permissions). They can fully manage organizations and organization memberships.
 - **Member (`org:member`)** The default role for new organization members. Access to organization resources is limited to only Read members Permission by default. They cannot manage organizations and organization memberships but can view information about the organization and other members in it.
+
+### Custom Roles
+
+You can create up to 10 of custom Organization Roles per application instance to meet your application needs. If you need more than 10 Roles, reach out to [support@clerk.dev](mailto:support@clerk.dev).
+
+Custom Roles can be granted Permissions and access. For example you can create a new Role of “billing” (`org:billing`) which can be used to group users who belong to a specific department of the Organization and have permission to manage credit card information, invoices, and other resources related to billing.
 
 ### The Creator Role
 
@@ -22,27 +32,13 @@ When a user creates a new Organization, that user is automatically added as the 
 You can't delete a Role if it's used as the Organization Creator Role. However, you can [reassign the Creator Role to another role](/docs/organizations/creator-role).
 </Callout>
 
-### Custom Roles
-
-You can create up to 10 of custom Organization Roles per application instance to meet your application needs.
-
-<Callout type="information">
-If you need more than 10 Roles, reach out to [support@clerk.dev](mailto:support@clerk.dev).
-</Callout>
-
-For example you can create a new Role of “billing” (`org:billing`) which can be used to group users who belong to a specific department of the Organization and have permission to manage other users. 
-
-<Callout type="information">
-Each Role must have a prefix of `org:`.
-</Callout>
-
 ## Permissions
 
 Permissions grant users privileged access to resources and operations like creating and deleting. Clerk supports two types of permissions, System and Custom. 
 
 ### System Permissions
 
-Clerk has a set of System Permissions that power Clerk’s Frontend API and [Organization related Clerk Components](/docs/components/overview#organization-components). They are a baseline set of permissions that Clerk needs to operate functionally. You cannot delete them, but you can extend them with your own application’s requirements.
+Clerk has a set of System Permissions that power Clerk’s Frontend API and [Organization related Clerk Components](/docs/components/overview#organization-components). They are a baseline set of permissions that Clerk needs to operate functionally.
 
 Clerk’s System Permissions consist of the following:
 
@@ -59,4 +55,10 @@ You can assign these System Permissions to Roles.
 
 When creating a new Permission, follow the format `org:<resource>:<action>`. You can then assign the Permission to an existing Role.
 
-For example, you could create a new Role “sales” (`org:sales`) and a new Permission “Create invoices” (`org:invoices:create`) which allows only users with this Permission to edit invoices. (You could also grant this Permission to the “billing” Role!)
+For example, you could create a new Role “sales” (`org:sales`) and a new Permission “Create invoices” (`org:invoices:create`) which allows only users with this Permission to edit invoices. You could also grant this Permission to the “billing” Role.
+
+## Next steps
+
+* [Create Roles and Permissions in the Clerk Dashboard](/docs/organizations/create-roles-permissions)
+* [Check out Clerk's pre-built `<Protect />` component](/docs/components/protect)
+* [Allow and limit access to resources by Role and Permissions](/docs/organizations/permissions-show-hide-content)
