making overview of organizations flow into Roles and Permissions...

--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -16,14 +16,6 @@ Clerk provides [prebuilt components](/docs/components/overview), [React hooks]
   https://github.com/clerk/organizations-demo
 </Callout>
 
-## Roles
+## Roles and Permissions
 
-Roles determine a user's level of access and permissions within an organization. Clerk comes with two default Roles, `admin` and `basic_member`, and lets you create your own custom Roles. Learn more in [Roles and Permissions](/docs/organizations/roles-permissions).
-
-### The Creator Role
-
-When a user creates a new Organization, that user is automatically added as the Organization's first member and assigned the default Role of `admin`. By default, `admin` is the Creator Role.
-
-<Callout type="warning">
-You can't delete a Role if it's used as the Organization Creator Role. However, you can [reassign the Creator Role to another role](/docs/organizations/creator-role).
-</Callout>
+Roles determine a user's level of access and Permissions within an organization. [Learn more about how Roles and Permissions work and how to create your own with Clerk.](/docs/organizations/roles-permissions).
