Verified Domains default role

--- a/docs/organizations/verified-domains.mdx
+++ b/docs/organizations/verified-domains.mdx
@@ -11,6 +11,16 @@ Domains can be verified through an email verfication code sent to an email that 
 
 An application instance may only have one verified domain of the same name, and an organization may only have one domain of the same name (verified or unverified).
 
+## Default role
+When enabling the Verified domains feature, you are also required to define which will role will be assigned to the user that will receive the Organization Invitation or Organization Suggestion in order to join your Organization.
+You can choose any of the available Organization Roles of your instance.
+
+<Callout type="warning">
+    You can't delete an Organization Role if it's used as the Verified Domain default role.
+</Callout>
+
+To specify the Verified Domain default role, in the Clerk Dashboard, go to the **[Organizations Settings](https://dashboard.clerk.com/last-active?path=organizations-settings)** page.
+
 ## Enrollment modes
 
 Once a domain is created and verified, an administrator can choose between two enrollment modes to enable new ways for users to join organizations.
