tack on sok edits from slack

--- a/docs/deployments/migrate-overview.mdx
+++ b/docs/deployments/migrate-overview.mdx
@@ -13,11 +13,11 @@ Each of these have trade-offs you'll need to consider on behalf of for your appl
 
 ## Basic Export / Import
 
-With Basic Export / Import, you are taking an export from your previous tool and importing data into Clerk. The most common way to handle this is by making use of the [Backend API](/docs/reference/backend-api/tag/Users#operation/CreateUser) and its `CreateUser` API endpoint. It's important to note that the `CreateUser` endpoint has a rate limit of 20 requests per 10 seconds.
+With Basic Export / Import, you are taking an export from your previous tool and importing data into Clerk. The most common way to handle this is by making use of the [Backend API](/docs/reference/backend-api/tag/Users#operation/CreateUser) and its `CreateUser` API endpoint. It's important to note that the `CreateUser` endpoint is rate limited. Please review our [Rate Limits](https://clerk.com/docs/backend-requests/resources/rate-limits#backend-api-requests) page for details.
 
 You'll also need to provide your `password_hasher` value (The hashing algorithm used to generate the password digest) and in some instances Clerk will transparently upgrade your users' password hashes to the more secure Bcrypt hashing algorithm. More details on this topic are available in the [Create a new user](/docs/reference/backend-api/tag/Users#operation/CreateUser!path=password_hasher&t=request) Backend API Reference docs. 
 
-> **Note:** If you are expecting to import 100k+ users, we recommend reaching out to [support@clerk.dev](mailto:support@clerk.dev) where we can work with you to coordinate a seamless import of your data.
+> **Note:** If you are expecting to import 100k+ users, we recommend reaching out to [support@clerk.dev](mailto:support@clerk.dev) where we can coordinate increases to the rate limits and ensure a seamless import of your data.
 
 
 ### Considerations
@@ -28,7 +28,7 @@ Consider that any export of your data will be a snapshot in time. This means tha
 
 
 #### Active sessions / Session management
-Another consideration is centered aroud how you handle session management. While most authentication providers don't provide session management out of the box, Clerk does. This means that when you switch over to using Clerk you'll be changing the system that handles your users' active sessions. This will likely end any currently active sessions initiated by your previous session management service (unless you are able to gracefully handle this somehow within your architecture).
+Another consideration is centered around how you handle session management. While most authentication providers don't provide session management out of the box, Clerk does. This means that when you switch over to using Clerk you'll be changing the system that handles your users' active sessions. This will likely end any currently active sessions initiated by your previous session management service (unless you are able to gracefully handle this somehow within your architecture).
 
 #### Foreign keys
 In your previous system you likely had some kind of ID / Foreign Key that you were using. As you migrate data into Clerk, you may want to continue referencing that previous ID alongside Clerk's provided user IDs. While each use case might have some variation, a common strategy is to store previous IDs as an `external_id`. You can then use Clerk's JWT customization to enrich a `userId` value with the `external_id` when present, or fallback to using Clerk's native ID when dealing with new users who don't have an `external_id` from your legacy system. You can configure this in the [Clerk Dashboard Sessions page](https://dashboard.clerk.com/last-active?path=sessions). Under **Customize session token**, click Edit and add the following:
@@ -61,7 +61,7 @@ A trickle migration is great for upgrading active users and sessions to take adv
 ## Migration Tools
 
 ### [clerk/migration-script](https://github.com/clerk/migration-script)
-To aid in basic migrations, Clerk provides an open-source script that takes a JSON file as input, containing a list of users, and creates a user in Clerk using Clerk's backend API. The script respects Clerk's backend rate limits and gracefully handles errors. We suggest you customize the [Zod schema](https://github.com/clerk/migration-script/blob/main/index.ts#L25-L43) to your application's needs.
+To aid in basic migrations, Clerk provides an open-source script that takes a JSON file as input, containing a list of users, and creates a user in Clerk using Clerk's backend API. The script respects Clerk's [backend rate limits](https://clerk.com/docs/backend-requests/resources/rate-limits#backend-api-requests) and gracefully handles errors. We suggest you customize the [Zod schema](https://github.com/clerk/migration-script/blob/main/index.ts#L25-L43) to your application's needs.
 
 ## Migration Guides
 Clerk is hard at work writing up more and more specific migration guides and tools. If you have are interested in specific guides please provide more feedback at https://feedback.clerk.com
