gentle mod to roles and perms

--- a/docs/organizations/permissions-show-hide-content.mdx
+++ b/docs/organizations/permissions-show-hide-content.mdx
@@ -1,9 +1,9 @@
 ---
-title: Use custom permissions to show and hide content from users
+title: Use Permissions to show and hide content from users
 description: 
 ---
 
-# Use custom permissions to show and hide content from users
+# Use Permissions to show and hide content from users
 
 Clerk has collection of utility functions and components in order to allow developers to perform Permission-based checks.
 
@@ -74,15 +74,12 @@ export default function SettingsLayout(props: PropsWithChildren){
 // /app/dashboard/settings/layout.tsx
 
 export default function SettingsLayout(props: PropsWithChildren){
-	const { has } = auth()
-
-	const canManage = has({permission:"org:team_settings:manage"});
-	const canRead = has({permission: "org:team_settings:read"});
-	const canAccessSettings = canManage || canRead;
-
-	if(!canAccessSettings) return null;
-
-	return props.children
+  const { has } = auth()  
+  const canManage = has({permission:"org:team_settings:manage"});
+  const canRead = has({permission: "org:team_settings:read"});
+  const canAccessSettings = canManage || canRead;  
+  if(!canAccessSettings) return null;  
+  return props.children
 }
 ```
 
