--- a/docs/components/protect.mdx
+++ b/docs/components/protect.mdx
@@ -5,61 +5,59 @@ description: The <Protect /> component is used for authorization. It only render
 
 # `<Protect />`
 
-The `<Protect />` component is used for authorization. It only renders its children when the current user has the specified [permission](/docs/organizations/roles-permissions) or role in the organization.
+The `<Protect />` component is used for authorization. It only renders its children when the current user has the specified [permission or role](/docs/organizations/roles-permissions) in the organization.
 
 ## Usage
 
-You can pass either a `permission` or `role` key to `<Protect />` to limit who can see the content it renders. If you do not pass either prop, `<Protect />` behaves the same as [`<SignedIn />`](/docs/components/control/signed-in) and will render its children if the user is signed in, regardless of their Role or its Permissions.
+You can pass either a `permission` or `role` key to `<Protect />` to limit who can see the content it renders. The recommended approach is to use `permission` because this lets you modify Roles without breaking your application. Permissions can be assigned to different Roles with ease.
+
+If you do not pass either prop, `<Protect />` behaves the same as [`<SignedIn />`](/docs/components/control/signed-in) and will render its children if the user is signed in, regardless of their Role or its Permissions.
 
 For more complex authorization logic, pass conditional logic to the `condition` prop.
 
 ### Render content by Permissions
 
-The children of the following component will only be visible to users with Roles that have the `org:posts:create` permission.
+The children of the following component will only be visible to users with Roles that have the `org:invoices:create` permission.
 
 <Tabs type="framework" items={["Next.js", "React"]}>
-    <Tab>
-        ```jsx
-        import { Protect } from "@clerk/nextjs";
+  <Tab>
+      ```jsx
+      import { Protect } from "@clerk/nextjs";
 
-        export default function ProtectPage() {
-            return (
-                <Protect
-                    permission="org:posts:create"
-                    fallback={<p>You do not have the permissions to create a post.</p>}
-                >
-                    {children}
-                </Protect>
-            );
-        }
-        ```
-    </Tab>
+      export default function ProtectPage() {
+        return (
+          <Protect
+            permission="org:invoices:create"
+            fallback={<p>You do not have the permissions to create an invoice.</p>}
+          >
+            {children}
+          </Protect>
+        );
+      }
+      ```
+  </Tab>
 
-    <Tab>
-        ```jsx
-        import { Protect } from "@clerk/react";
+  <Tab>
+    ```jsx
+    import { Protect } from "@clerk/clerk-react";
 
-        export default function ProtectPage() {
-            return (
-                <Protect
-                    permission="org:posts:create"
-                    fallback={<p>You do not have the permissions to create a post.</p>}
-                >
-                    {children}
-                </Protect>
-            );
-        }
-        ```
-    </Tab>
+    export default function ProtectPage() {
+      return (
+        <Protect
+          permission="org:invoices:create"
+          fallback={<p>You do not have the permissions to create an invoice.</p>}
+        >
+          {children}
+        </Protect>
+      );
+    }
+    ```
+  </Tab>
 </Tabs>
 
 ### Render content by Role
 
-<Callout type="warning">
-    `<Protect/>` allows a role key to be passed for convenience, it is recommended to check against permissions instead.
-</Callout>
-
-The children of the following component will only be visible to users with the `org:editor` Role.
+While authorization by `permission` is recommended, `<Protect/>` allows a role key to be passed for convenience. The children of the following component will only be visible to users with the `org:billing` Role.
 
 <Tabs type="framework" items={["Next.js", "React"]}>
   <Tab>
@@ -69,8 +67,8 @@ The children of the following component will only be visible to users with the `
     export default function ProtectPage() {
       return (
         <Protect
-          role="org:editor"
-          fallback={<p>Only an admin can access this content.</p>}
+          role="org:billing"
+          fallback={<p>Only a member of the Billing department can access this content.</p>}
         >
           {children}
         </Protect>
@@ -81,13 +79,13 @@ The children of the following component will only be visible to users with the `
 
   <Tab>
     ```jsx
-    import { Protect } from "@clerk/react";
+    import { Protect } from "@clerk/clerk-react";
 
     export default function ProtectPage() {
       return (
         <Protect
-          role="org:editor"
-          fallback={<p>Only an admin can access this content.</p>}
+          role="org:billing"
+          fallback={<p>Only a member of the Billing department can access this content.</p>}
         >
           {children}
         </Protect>
