one more small typo fix for consistency

--- a/docs/security/programmatically-lock-user-accounts.mdx
+++ b/docs/security/programmatically-lock-user-accounts.mdx
@@ -9,7 +9,7 @@ description: Lock users to prevent them from signing in based on your own custom
 
 You can programmatically unlock a user using the [UnlockUser](https://clerk.com/docs/reference/backend-api/tag/Users#operation/LockUser) Backend API operation. 
 
-### Usecases
+### Use Cases
 
 #### "Unlock button"
 
