updating roles and permissions a bit more

--- a/docs/organizations/roles-permissions.mdx
+++ b/docs/organizations/roles-permissions.mdx
@@ -9,14 +9,18 @@ Clerk supports modeling your own custom Roles and Permissions to control access 
 
 ## Roles
 
-Roles determine a user's level of access to the organization. 
+Roles determine a user's level of access to the Organization. You can extend a Roles privileges and access to resources by adding [Permissions](#permissions).
 
 ### Default Roles
 
 For each instance there are currently two default roles:
 
-- **Admin (`admin`)** Offers full access to organization resources. Members with the admin role have all the [System Permissions](#system-permissions). They can fully manage organizations and organization memberships.
-- **Member (`org:member`)** The default role for new organization members. Access to organization resources is limited to only Read members Permission by default. They cannot manage organizations and organization memberships but can view information about the organization and other members in it.
+- **Admin (`admin`)** Offers full access to Organization resources. Members with the admin role have all the [System Permissions](#system-permissions). They can fully manage Organizations and Organization memberships.
+- **Member (`org:member`)** The default role for new Organization members. Access to Organization resources is limited to only Read members Permission by default. They cannot manage Organizations and Organization memberships but can view information about the Organization and other members in it. 
+
+<Callout type="info">
+If you created an Organization before December 2023, the Member Role is `basic_member`.
+</Callout>
 
 ### Custom Roles
 
@@ -42,8 +46,8 @@ Clerk has a set of System Permissions that power Clerk’s Frontend API and [Org
 
 Clerk’s System Permissions consist of the following:
 
-- Manage organization (`org:sys_profile:manage`)
-- Delete organization (`org:sys_profile:delete`)
+- Manage Organization (`org:sys_profile:manage`)
+- Delete Organization (`org:sys_profile:delete`)
 - Read members (`org:sys_memberships:read`)
 - Manage members (`org:sys_memberships:manage`)
 - Read domains (`org:sys_domains:read`)
