trying a new title on permissions guide

--- a/docs/components/protect.mdx
+++ b/docs/components/protect.mdx
@@ -97,11 +97,13 @@ While authorization by `permission` is recommended, `<Protect/>` allows a role k
 
 ## Properties
 
-Pass one of these properties.
-
 | Name | Type | Description |
 | --- | --- | --- |
-| `role` | `string` | Optional string corresponding to an Organization's Role in the format `org:<role>` |
-| `permission` | `string` | Optional string corresponding to a Role's Permission in the format `org:<resource>:action` |
-| `fallback` | `JSX` | An optional snippet of JSX to show when a user doesn't have the `role` or `permission` to access the protected content. |
 | `condition` | `has => boolean` | Optional conditional logic that renders the children if it returns `true`. |
+| `fallback` | `JSX` | An optional snippet of JSX to show when a user doesn't have the `role` or `permission` to access the protected content. |
+| `permission` | `string` | Optional string corresponding to a Role's Permission in the format `org:<resource>:<action>` |
+| `role` | `string` | Optional string corresponding to an Organization's Role in the format `org:<role>` |
+
+<Callout type="warning">
+`<Protect />` can only accept `permission` *or* `role`, not both. `permission` is the recommended approach.
+</Callout>
