explaining has a bit more

--- a/docs/organizations/permissions-show-hide-content.mdx
+++ b/docs/organizations/permissions-show-hide-content.mdx
@@ -52,9 +52,7 @@ export function SettingsForm(){
 
 ### `useAuth()` hook and `has`
 
-The [`useAuth()`](/docs/references/react/use-auth) hook provides the minimal information needed for data-loading and helper methods to manage the current active session. 
-
-// TODO: explain what this snippet is doing. What is `has` doing?
+The [`useAuth()`](/docs/references/react/use-auth) hook can help you access what permissions a user has using `has`. In the below snippet, `has({ permission: "org:team_settings:manage" })` returns `false` if the user does not have the `org:team_settings:manage` Permission.
 
 <CodeBlockTabs type="framework" options={["Next.js"]}>
 ```tsx filename="/app/dashboard/settings/form.tsx"
@@ -124,6 +122,7 @@ export default function SettingsLayout(props: PropsWithChildren){
   return props.children
 }
 ```
+</CodeBlockTabs>
 
 ## Authorization in Server Actions
 
@@ -172,6 +171,7 @@ return users.getTeams(userId)
   // ...
 }
 ```
+</CodeBlockTabs>
 
 ## Authorization in Remix Loaders
 
@@ -194,6 +194,7 @@ export default function Settings() {
   );
 }
 ```
+</CodeBlockTabs>
 
 ## Authorization in JS SDK
 
