explaining has a bit more

--- a/docs/organizations/permissions-show-hide-content.mdx
+++ b/docs/organizations/permissions-show-hide-content.mdx
@@ -7,14 +7,14 @@ description:
 
 Clerk provides two helpers for authorization:
 
-- **Protect helpers** are opinionated and will not process unauthorized users, either by not rendering children or by throwing errords.
-- **Has helpers** are more composable and flexible. You can decide what to do if the user lacks the required Permissions.
+- **`protect` helpers** are opinionated and will not process unauthorized users, either by not rendering children or by throwing errors. [`<Protect />` component](/docs/components/protect) and the experimental `auth().protect` fall into this category.
+- **`has` helpers** are more composable and flexible. They let you check to see what Permissions a user *has*. You can decide what to do if the user lacks the required Permissions.
 
 ## Authorization in Client Components
 
 ### `<Protect/>` component
 
-The following snippet uses Clerk's [`<Protect />` component](/docs/components/protect) to only render the form for users with the `org:team_settings:manage` Permissions.
+The following snippet uses Clerk's `<Protect />` component to only render the form for users with the `org:team_settings:manage` Permissions.
 
 This example will work for Server Side Rendering (SSR) and Client Side Rendering (CSR). Because this is a Client component, the exact code from below will work for any React meta-framework, like Next.js, Remix, or Gatsby.
 
