explaining has a bit more

--- a/docs/organizations/permissions-show-hide-content.mdx
+++ b/docs/organizations/permissions-show-hide-content.mdx
@@ -5,7 +5,7 @@ description:
 
 # Restrict access with Permissions
 
-Clerk provides two helpers for authorization:
+Clerk provides two kinds of helpers for authorization:
 
 - **`protect` helpers** are opinionated and will not process unauthorized users, either by not rendering children or by throwing errors. [`<Protect />` component](/docs/components/protect) and the experimental `auth().protect` fall into this category.
 - **`has` helpers** are more composable and flexible. They let you check to see what Permissions a user *has*. You can decide what to do if the user lacks the required Permissions.
