Updating references to basic_member to org:member

--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -108,7 +108,7 @@ function AdminControls({
         Remove member
       </button>{" "}
       {membership.role === "admin" ? (
-        <button disabled={disabled} onClick={() => changeRole("basic_member")}>
+        <button disabled={disabled} onClick={() => changeRole("org:member")}>
           Change to member
         </button>
       ) : (
@@ -154,7 +154,7 @@ function InvitationList() {
 function InviteMember(){
   const { organization } = useOrganization();
   const [emailAddress, setEmailAddress] = useState("");
-  const [role, setRole] = useState<"basic_member" | "admin">("basic_member");
+  const [role, setRole] = useState<"org:member" | "admin">("org:member");
   const [disabled, setDisabled] = useState(false);
 
   const onSubmit = async (e) => {
@@ -162,7 +162,7 @@ function InviteMember(){
     setDisabled(true);
     await organization.inviteMember({ emailAddress, role });
     setEmailAddress("");
-    setRole("basic_member");
+    setRole("org:member");
     setDisabled(false);
   };
 
@@ -187,9 +187,9 @@ function InviteMember(){
       <label>
         <input
           type="radio"
-          checked={role === "basic_member"}
+          checked={role === "org:member"}
           onChange={() => {
-            setRole("basic_member");
+            setRole("org:member");
           }}
         />{" "}
         Member
@@ -292,7 +292,7 @@ function AdminControls({
         Remove member
       </button>{" "}
       {membership.role === "admin" ? (
-        <button disabled={disabled} onClick={() => changeRole("basic_member")}>
+        <button disabled={disabled} onClick={() => changeRole("org:member")}>
           Change to member
         </button>
       ) : (
@@ -338,7 +338,7 @@ function InvitationList() {
 function InviteMember(){
   const { organization } = useOrganization();
   const [emailAddress, setEmailAddress] = useState("");
-  const [role, setRole] = useState<"basic_member" | "admin">("basic_member");
+  const [role, setRole] = useState<"org:member" | "admin">("org:member");
   const [disabled, setDisabled] = useState(false);
 
   const onSubmit = async (e) => {
@@ -346,7 +346,7 @@ function InviteMember(){
     setDisabled(true);
     await organization.inviteMember({ emailAddress, role });
     setEmailAddress("");
-    setRole("basic_member");
+    setRole("org:member");
     setDisabled(false);
   };
 
@@ -371,9 +371,9 @@ function InviteMember(){
       <label>
         <input
           type="radio"
-          checked={role === "basic_member"}
+          checked={role === "org:member"}
           onChange={() => {
-            setRole("basic_member");
+            setRole("org:member");
           }}
         />{" "}
         Member
@@ -415,7 +415,7 @@ function InviteMember(){
           updateBtn.addEventListener("click", async function(e) {
             e.preventDefault();
             const role = membership.role === "admin" ?
-              "basic_member" :
+              "org:member" :
               "admin";
             await membership.update({ role });
           });
@@ -492,7 +492,7 @@ function InviteMember(){
         try {
           await currentOrganization.inviteMember({
             emailAddress: inputEl.value,
-            role: "basic_member",
+            role: "org:member",
           });
         } catch (err) {
           console.error(err);
