--- a/docs/references/react/use-organization.mdx
+++ b/docs/references/react/use-organization.mdx
@@ -186,7 +186,7 @@ type OrganizationInvitationStatus = "pending" | "accepted" | "revoked";
 ### `MembershipRole`
 
 ```typescript
-type MembershipRole = "admin" | "basic_member";
+type MembershipRole = "admin" | "org:member";
 ```
 
 ### `OrganizationEnrollmentMode`
