--- a/docs/references/backend/organization/update-organization-membership.mdx
+++ b/docs/references/backend/organization/update-organization-membership.mdx
@@ -23,4 +23,4 @@ const organization = await clerkClient.organizations.updateOrganizationMembershi
 | --- | --- | --- |
 | `organizationId` | `string` | The organization ID of the organization a user belongs to. |
 | `userId` | `string` | The ID of the user. |
-| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role to assign to the user. |
+| `role` | `'admin' \| 'org:member' \| 'guest_member'` | The role to assign to the user. |
