--- a/docs/references/javascript/organization-invitation.mdx
+++ b/docs/references/javascript/organization-invitation.mdx
@@ -15,7 +15,7 @@ The `OrganizationInvitation` object is the model around an organization invitati
 | `emailAddress` | `string` | The email address the invitation has been sent. |
 | `organizationId` | `string` | The organization ID of the organization this invitation is for. |
 | `publicMetadata` | `object` | The public metadata of the organization membership. |
-| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role of the current user in the organization. |
+| `role` | `'admin' \| 'org:member' \| 'guest_member'` | The role of the current user in the organization. |
 | `status` | `'pending' \| 'accepted' \| 'revoked'` | The status of the invitation. |
 | `createdAt` | `Date` | Date of the time the membership was created. |
 | `updatedAt` | `Date` | Date of the last time the membership was updated. |
