--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -104,6 +104,36 @@ Retrieves the user's session token for the given template or the default clerk t
 | --- | --- |
 | `Promise<string \| null>` | The requested token. |
 
+### `checkAuthorization()`
+
+```typescript
+function checkAuthorization(param: CheckAuthorizationParams) => boolean;
+```
+
+#### `CheckAuthorizationParams`
+```typescript
+type CheckAuthorizationParams =
+  | {
+      role: ClerkDefaultRole | CustomRole;
+      permission?: never;
+    }
+  | {
+      role?: never;
+      permission: ClerkDefaultPermission | CustomPermission;
+    };
+```
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `role` | `string` | You can pass any of the clerk default role keys or the ones that you have defined. |
+| `permission` | `string` | You can pass any of the clerk default permissoin keys or the ones that you have defined. |
+
+#### Returns
+
+| Type | Description |
+| --- | --- |
+| `boolean` | A boolean that indicates if a user is authorized for the specified role or permission. |
+
 ## Types
 
 ### `PublicUserData`
