--- a/docs/references/react/use-auth.mdx
+++ b/docs/references/react/use-auth.mdx
@@ -104,6 +104,8 @@ The `useAuth()` hook is a convenient way to access the current auth state. This 
 | `sessionId` | The current user's session ID. |
 | `signOut` | A function that signs the user out. |
 | `getToken` | A function that returns a promise that resolves to the current user's session token. Can also be used to retrieve a custom JWT template. |
+| `has` | A function that returns a boolean based on the permission or role provided as parameter. Can be used for authorization |
 | `orgId` | The current user's organization ID. |
 | `orgRole` | The current user's organization role. |
+| `orgPermissions` | The current user's organization permissions. |
 | `orgSlug` | The current user's organization slug. |
