chore: Improve authorization guide 2

--- a/docs/organizations/permissions-show-hide-content.mdx
+++ b/docs/organizations/permissions-show-hide-content.mdx
@@ -15,8 +15,9 @@ Clerk provides two kinds of helpers for authorization:
 The examples bellow work for both SSR and CSR. Examples are written for Nextjs App Router but they are supported any React meta framework (f.e. Remix, Gatsby).
 
 <Tabs type="framework" items={["Nextjs with Protect", "Nexjts with useAuth().has"]}>
-    The following snippet uses Clerk's `<Protect />` component to only render the form for users with the `org:team_settings:manage` Permissions.
-    <Tab>
+  <Tab>
+  The following snippet uses Clerk's `<Protect />` component to only render the form for users with the `org:team_settings:manage` Permissions.
+
     ```tsx filename="/app/dashboard/settings/form.tsx"
       'use client';
       import { Protect } from "@clerk/nextjs";
@@ -37,7 +38,8 @@ The examples bellow work for both SSR and CSR. Examples are written for Nextjs A
   </Tab>
 
   <Tab>
-      The [`useAuth()`](/docs/references/react/use-auth) hook can help you access what permissions a user has using `has`. In the below snippet, `has({ permission: "org:team_settings:manage" })` returns `false` if the user does not have the `org:team_settings:manage` Permission.
+    The [`useAuth()`](/docs/references/react/use-auth) hook can help you access what permissions a user has using `has`. In the below snippet, `has({ permission: "org:team_settings:manage" })` returns `false` if the user does not have the `org:team_settings:manage` Permission.
+
     ```tsx filename="/app/dashboard/settings/form.tsx"
       'use client';
       import { useAuth } from "@clerk/nextjs";
@@ -62,7 +64,8 @@ The examples bellow work for both SSR and CSR. Examples are written for Nextjs A
 
 <Tabs type="framework" items={["RSC with Protect", "RSC with auth().has", "RSC with auth().protect"]}>
   <Tab>
-      The following snippet uses `<Protect />`'s `condition` prop to conditionally render its children if the user has either `org:team_settings:manage` or `org:team_settings:read` Permissions.
+    The following snippet uses `<Protect />`'s `condition` prop to conditionally render its children if the user has either `org:team_settings:manage` or `org:team_settings:read` Permissions.
+
     ```tsx filename="/app/dashboard/settings/layout.tsx"
       import type { PropsWithChildren } from "react";
       import { Protect } from "@clerk/nextjs";
@@ -80,7 +83,8 @@ The examples bellow work for both SSR and CSR. Examples are written for Nextjs A
   </Tab>
 
   <Tab>
-      The following snippet uses `has` to inspect a user's Permissions granularly. If the user doesn't have both `org:team_settings:manage` and `org:team_settings:read` Permissions, the component returns `null` instead of rendering its children.
+    The following snippet uses `has` to inspect a user's Permissions granularly. If the user doesn't have both `org:team_settings:manage` and `org:team_settings:read` Permissions, the component returns `null` instead of rendering its children.
+
     ```tsx filename="/app/dashboard/settings/layout.tsx"
       import type { PropsWithChildren } from "react";
       import { auth } from "@clerk/nextjs/server";
@@ -103,14 +107,16 @@ The examples bellow work for both SSR and CSR. Examples are written for Nextjs A
     <Callout>
       `auth().protect()` will throw a `notFound` Nextjs error if authorization checks fail
     </Callout>
+
     ```tsx filename="/app/dashboard/settings/layout.tsx"
       import type { PropsWithChildren } from "react";
       import { auth } from "@clerk/nextjs/server";
 
       export default function SettingsLayout(props: PropsWithChildren){
-        const { userId } = auth().protect(
-            has => has({permission: "org:team_settings:manage"}) ||
-              has({permission: "org:team_settings:read"}))
+        const { userId } = auth().protect(has => 
+          has({permission: "org:team_settings:manage"}) ||
+          has({permission: "org:team_settings:read"})
+        )
 
         return props.children
       }
@@ -142,9 +148,13 @@ The examples bellow work for both SSR and CSR. Examples are written for Nextjs A
 
   <Tab>
     <Callout>
+
       `auth().protect()` will throw a `notFound` Nextjs error if authorization checks fail
+
     </Callout>
+
     #### Using `auth().protect`
+
     ```tsx
       import { useAuth } from "@clerk/nextjs";
 
@@ -155,7 +165,9 @@ The examples bellow work for both SSR and CSR. Examples are written for Nextjs A
         return users.createTeam(userId);
       }
       ```
+
     #### Using `auth().has`
+    
     ```tsx
       import { useAuth } from "@clerk/nextjs";
 
